<resources>
    <string name="app_name">My Application</string>
    <string name="question">Question...</string>
    <string name="answer">Answer...</string>
    <string name="topic">Topic</string>
    <string name="card_saved_toast">New card saved</string>
    <string name="edit">Edit</string>
    <string name="textview">TextView</string>
    <string name="question_summary_hint">Question</string>
    <string name="start">Start</string>
    <string name="delete_card">delete card</string>
    <string name="edit_card">edit card</string>
</resources>