<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEditCard">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/topic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="326dp"
        android:layout_height="236dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/question"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="339dp"
        android:layout_height="383dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/answer"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>